<resources>
    <string name="app_name">Squid Game</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="vibrations">Vibrations</string>
    <string name="settings">Settings</string>
    <string name="main_menu">Main Menu</string>
    <string name="play">Play</string>
    <string name="top_ten">Top Ten</string>
    <string name="sounds">Sounds</string>
    <string name="sensors">Sensors</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="select_game_mode">Select Game Mode</string>
    <string name="buttons">Buttons</string>
    <string name="nickname">Nickname</string>
    <string name="start_game">Start Game</string>
</resources>