<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">



    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_TIL_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:padding="16dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_TIET_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nickname" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/dialog_TXT_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_TIL_til"
        android:text="Game Mode:"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:padding="16dp"
        android:layout_centerHorizontal="true"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_TXT_txt"
        android:layout_alignStart="@id/dialog_TXT_txt"
        android:layout_centerInParent="true"
        android:padding="16dp">

        <RadioButton
            android:id="@+id/radio_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttons" />

        <RadioButton
            android:id="@+id/radio_sensors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensors" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@id/radioGroup"
        android:layout_alignBottom="@id/radioGroup"
        android:layout_toEndOf="@id/radioGroup"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:src="@drawable/ic_buttons"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:src="@drawable/ic_sensors"
            />

    </LinearLayout>


</RelativeLayout>